--- a/react/reactfilozofia/index.html
+++ b/react/reactfilozofia/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <h6>React:</h6>
-        <div id="react-button-container">
+        <div id="react-button-container"></div>
     <!--react hasznalat annak letoltese nelkul -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
